<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>

        <variable
            name="model"
            type="com.example.samcomprac.model.DataModel" />
    </data>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailsActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_5sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:layout_marginHorizontal="@dimen/_3sdp"
                    android:textColor="@color/c_000000"
                    android:textSize="@dimen/_12ssp" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_Name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_3sdp"
                    android:maxLines="1"
                    android:text="@{model.name}"
                    android:ellipsize="end"
                    tools:text="Hello"
                    android:textColor="@color/c_000000_80"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:layout_marginHorizontal="@dimen/_3sdp"
                    android:textColor="@color/c_000000"
                    android:textSize="@dimen/_12ssp" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_Price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_3sdp"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@{model.price}"
                    tools:text="Hello"
                    android:textColor="@color/c_000000_80"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stock_quantity"
                    android:layout_marginHorizontal="@dimen/_3sdp"
                    android:textColor="@color/c_000000"
                    android:textSize="@dimen/_12ssp" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_stock_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_3sdp"
                    android:text="@{model.stockQuantity}"
                    android:ellipsize="end"
                    tools:text="Hello"
                    android:textColor="@color/c_000000_80"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/short_description"
                    android:layout_marginHorizontal="@dimen/_3sdp"
                    android:textColor="@color/c_000000"
                    android:textSize="@dimen/_12ssp" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_short_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_3sdp"
                    android:text="@{model.shortDescription}"
                    android:ellipsize="end"
                    tools:text="Hello"
                    android:textColor="@color/c_000000_80"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/full_description"
                    android:layout_marginHorizontal="@dimen/_3sdp"
                    android:textColor="@color/c_000000"
                    android:textSize="@dimen/_12ssp" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_full_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_3sdp"
                    android:text="@{model.fullDescription}"
                    tools:text="Hello"
                    android:textColor="@color/c_000000_80"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>
</layout>