<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

        <variable
            name="model"
            type="com.example.samcomprac.model.DataModel" />
    </data>
    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:orientation="vertical"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_5sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_5sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:layout_marginHorizontal="@dimen/_3sdp"
                    android:textColor="@color/c_000000"
                    android:textSize="@dimen/_12ssp" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_Name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_3sdp"
                    android:maxLines="1"
                    android:text="@{model.name}"
                    android:ellipsize="end"
                    tools:text="Hello"
                    android:textColor="@color/c_000000_80"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:layout_marginHorizontal="@dimen/_3sdp"
                    android:textColor="@color/c_000000"
                    android:textSize="@dimen/_12ssp" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_Price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_3sdp"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@{model.price}"
                    tools:text="Hello"
                    android:textColor="@color/c_000000_80"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stock_quantity"
                    android:layout_marginHorizontal="@dimen/_3sdp"
                    android:textColor="@color/c_000000"
                    android:textSize="@dimen/_12ssp" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_stock_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_3sdp"
                    android:maxLines="1"
                    android:text="@{model.stockQuantity}"
                    android:ellipsize="end"
                    tools:text="Hello"
                    android:textColor="@color/c_000000_80"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>